<resources>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="home">Home</string>
    <string name="me">Me</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="search">Search</string>

    <string name="trace">Trace</string>
    <string name="search_title">Please enter search keywords</string>
    <string name="search_history">Search History</string>

    <string name="best_match">Best match</string>
    <string name="most_stars">Most stars</string>
    <string name="fewest_stars">Fewest stars</string>
    <string name="most_forks">Most forks</string>
    <string name="fewest_forks">Fewest forks</string>
    <string name="recently_updated">Recently updated</string>
    <string name="least_recently_updated">Least recently updated</string>

    <string name="most_followers">Most followers</string>
    <string name="fewest_followers">Fewest followers</string>
    <string name="most_recently_joined">Most recently joined</string>
    <string name="least_recently_joined">Least recently joined</string>
    <string name="most_repositories">Most repositories</string>
    <string name="fewest_repositories">Fewest repositories</string>


    <string name="repositories">Repositories</string>
    <string name="users">Users</string>

    <string name="followers">Followers</string>
    <string name="following">Following</string>

    <string name="github">GitHub</string>
    <string name="about_copyright">© 2020 ZhuZiChu All rights reserved.</string>

    <string name="empty_desc_fail_title">Loading Failed</string>
    <string name="empty_desc_fail_desc">Please check whether the network can connect normally</string>
    <string name="empty_desc_retry">Retry</string>

    <string name="settings_theme_title">Choose theme</string>
    <string name="settings_theme_system">System default</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_battery">Set by Battery Saver</string>
    <string name="night_mode">Night mode</string>

    <string name="repository_info">INFO</string>
    <string name="repository_files">FILES</string>
    <string name="repository_commits">COMMITS</string>
    <string name="repository_activity">ACTIVITY</string>
    <string name="repository_language_size">Language %s，size %s</string>
    <string name="unknown">Unknown</string>
    <string name="issues">issues</string>
    <string name="stargazers">Stargazers</string>
    <string name="watchers">Watchers</string>
    <string name="forks">Forks</string>

    <string name="tips">Tips</string>
    <string name="cancel">Cancel</string>
    <string name="logout_tips">Are you sure you want to exit the account？</string>
    <string name="ok">OK</string>
    <string name="delete_all_trace_tips">Are you sure you want to delete all trace？</string>
    <string name="empty_desc_title">Empty</string>

    <string name="login_in_browser">LOGIN WITH BROWSER</string>

</resources>
